Used var $container-md instead of 599px to handle content and sidebar responsive logic. Fixes sidebar opened in landscape mode on mobile devices.

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -20,14 +20,14 @@
     width: 50px;
     height: 50px;
     margin-top: -4px;
-    @media (min-width: 599px) {
+    @media (min-width: $container-md) {
       margin-left: 15px;
     }
   }
 
   & .navbar-hamburger {
     display: none;
-    @media only screen and (max-width: 599px) {
+    @media only screen and (max-width: $container-md) {
       display: inline-block;
       padding: 21px 15px;
     }
@@ -36,7 +36,7 @@
   & .navbar-name {
     display: inline-block;
     padding: 21px 15px;
-    @media only screen and (max-width: 599px) {
+    @media only screen and (max-width: $container-sm) {
       display: none !important;
     }
   }
